--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT=8000
 CLIENT_URL=http://localhost:3000
 DATABASE='mongodb+srv://alienbuild:!Daytona193@alienbuild-official-sit.yqa8e.mongodb.net/<dbname>?retryWrites=true&w=majority'
+JWT_SECRET=2weowk3o4kokgFDertWAdgg435gDdfggf
