--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "next": "^10.0.4",
+    "nprogress": "^0.2.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sass": "^1.32.2"
   }
 }
