--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "@zeit/next-sass": "^1.0.1",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
     "next": "^10.0.4",
     "nprogress": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-quill": "^1.3.5",
+    "react-render-html": "^0.6.0",
     "sass": "^1.32.2"
   }
 }
