--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "html-react-parser": "^1.2.1",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
@@ -24,6 +25,7 @@
     "react-dom": "^17.0.1",
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0",
+    "react-syntax-highlighter": "^15.4.3",
     "sass": "^1.32.2"
   }
 }
