--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@svgr/webpack": "^5.5.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "html-react-parser": "^1.2.1",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
+    "lord-icon-element": "^1.3.0",
+    "lottie-web": "^5.6.10",
     "moment": "^2.29.1",
     "next": "^10.0.4",
     "nprogress": "^0.2.0",
@@ -26,6 +31,7 @@
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0",
     "react-syntax-highlighter": "^15.4.3",
-    "sass": "^1.32.2"
+    "react-wavify": "^1.5.2",
+    "sass": "^1.32.5"
   }
 }
