--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "html-react-parser": "^1.2.1",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
-    "lord-icon-element": "^1.3.0",
+    "lord-icon-element": "https://github.com/alienbuild/lord-icon-element.git",
     "lottie-web": "^5.6.10",
     "moment": "^2.29.1",
     "next": "^10.0.4",
@@ -31,6 +31,7 @@
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0",
     "react-syntax-highlighter": "^15.4.3",
+    "react-text-transition": "^1.1.4",
     "react-wavify": "^1.5.2",
     "sass": "^1.32.5"
   }
