--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
     "@svgr/webpack": "^5.5.0",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "autoprefixer": "9",
     "html-react-parser": "^1.2.1",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
@@ -25,6 +25,7 @@
     "moment": "^2.29.1",
     "next": "^10.0.4",
     "nprogress": "^0.2.0",
+    "postcss": "7",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -33,6 +34,7 @@
     "react-syntax-highlighter": "^15.4.3",
     "react-text-transition": "^1.1.4",
     "react-wavify": "^1.5.2",
-    "sass": "^1.32.5"
+    "sass": "^1.32.5",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
