--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@svgr/webpack": "^5.5.0",
-    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
-    "autoprefixer": "9",
+    "autoprefixer": "^10.2.4",
     "html-react-parser": "^1.2.1",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
@@ -25,7 +24,7 @@
     "moment": "^2.29.1",
     "next": "^10.0.4",
     "nprogress": "^0.2.0",
-    "postcss": "7",
+    "postcss": "^8.2.4",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -35,6 +34,6 @@
     "react-text-transition": "^1.1.4",
     "react-wavify": "^1.5.2",
     "sass": "^1.32.5",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "tailwindcss": "^2.0.2"
   }
 }
