--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,12 +28,14 @@
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.11.1",
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0",
     "react-syntax-highlighter": "^15.4.3",
     "react-text-transition": "^1.1.4",
     "react-wavify": "^1.5.2",
     "sass": "^1.32.5",
+    "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.2"
   }
 }
