--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start"
+    "build": "next build",
+    "start": "next start",
+    "export": "npm run build && next export"
   },
   "keywords": [],
   "author": "",
